fix broken styles

--- a/less/components/ap-form.less
+++ b/less/components/ap-form.less
@@ -24,3 +24,8 @@
 .has-error .help-block {
   color: @brand-primary;
 }
+
+.ap-form .form-group {
+  display: block;
+  width: 100%;
+}
