--- a/less/forms.less
+++ b/less/forms.less
@@ -70,13 +70,9 @@ input[disabled] {
   background-color: #eee;
 }
 
-.form-inline .form-group {
-  display: inline-block;
-  margin-bottom: 0;
-  vertical-align: middle;
-}
-
 .form-group {
+  display: inline-block;
+  width: @input-width;
   margin-left: @gutter-width / 4;
   vertical-align: bottom;
 
